--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@
     margin-top: 20px;
 }
 
-.hill-dis li{
+.hill-dis li {
     margin-top: 20px;
     margin-left: -15px;
 }
@@ -198,10 +198,133 @@
     font-weight: 800;
     margin-top: 10px;
 }
+
 /* ///////////////////////////////////// */
 
+.choose-container {
+    /* text-align: center; */
+    width: 85%;
+    margin: 100px auto;
+}
+
+.choose-title {
+    color: #131318;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 2.6rem;
+    font-weight: 800;
+}
+
+.choose-dis {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-family: Mulish;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    padding: 0px 210px;
+}
+
+.st-row {
+    display: flex;
+    gap: 20px;
+    margin: 20px auto;
+}
+
+.mal {
+    position: absolute;
+    color: #FFF;
+    margin-top: 10%;
+    left: 25%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+
+}
+
+.indo {
+    position: absolute;
+    color: #FFF;
+    margin-top: 10%;
+    left: 70%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+.nd-row {
+    display: flex;
+    gap: 20px;
+    margin: 20px auto;
+}
+
+.sri {
+    position: absolute;
+    color: #FFF;
+    margin-top: 9%;
+    left: 18%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+
+}
+
+.north {
+    position: absolute;
+    color: #FFF;
+    margin-top: 9%;
+    left: 48%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+
+}
+
+.kash {
+    position: absolute;
+    color: #FFF;
+    margin-top: 9%;
+    left: 81%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+
+}
 
 
+
+.rd-row {
+    display: flex;
+    gap: 20px;
+    margin: 20px auto;
+}
+
+.bang {
+    position: absolute;
+    color: #FFF;
+    margin-top: 10%;
+    left: 20%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+.bandor {
+    position: absolute;
+    color: #FFF;
+    margin-top: 10%;
+    left: 65%;
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 28px;
+    font-weight: 800;
+}
 
 
 
@@ -290,10 +413,118 @@
         margin-top: -24px;
     }
 
-    .hill-title{
+    .hill-title {
         font-size: 1.4rem;
     }
-/* //////////////////////////////////////////////// */
+
+    /* //////////////////////////////////////////////// */
+
+
+    .choose-dis {
+        padding: 0px;
+    }
+
+    .choose-container img{
+        height: 176px;
+        border-radius: 16px;
+    }
+
+    .st-row {
+        flex-direction: column;
+    }
+
+    .mal {
+        position: absolute;
+        color: #FFF;
+        margin-top: 18%;
+        left: 35%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    }
+
+    .indo {
+        position: absolute;
+        color: #FFF;
+        margin-top: 70%;
+        left: 34%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    }
+
+    .nd-row {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .sri {
+        position: absolute;
+        color: #FFF;
+        margin-top: 18%;
+        left: 35%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    
+    }
+    
+    .north {
+        position: absolute;
+        color: #FFF;
+        margin-top: 70%;
+        left: 25%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    
+    }
+    
+    .kash {
+        position: absolute;
+        color: #FFF;
+        margin-top: 120%;
+        left: 35%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    
+    }
+
+    .rd-row {
+        flex-direction: column;
+    }
+
+    .bang {
+        position: absolute;
+        color: #FFF;
+        margin-top: 20%;
+        left: 30%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    
+    }
+    
+    .bandor {
+        position: absolute;
+        color: #FFF;
+        margin-top: 70%;
+        left: 30%;
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 28px;
+        font-weight: 800;
+    
+    }
+
+/* ////////////////////////////////////////     */
 
 
 }
