--- a/style.css
+++ b/style.css
@@ -679,17 +679,6 @@
     font-weight: 800;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 .img-content {
     background-image: url("./Images/Rectangle\ 8\ \(1\).png");
     background-repeat: no-repeat;
@@ -730,6 +719,50 @@
 }
 
 /* //////////////////////////////////////// */
+
+.footer-container {
+    background: rgba(19, 19, 24, 0.05);
+    padding: 70px 248px;
+}
+
+.foot-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: -52px;
+}
+
+.foot-dis {
+    color: #5A5A5D;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 0px;
+}
+
+.foot-icon {
+    text-align: center;
+    margin-top: 33px;
+    margin-bottom: 35px;
+}
+
+hr{
+    color: rgba(19, 19, 24, 0.10);;
+}
+
+.footer-container p {
+    color: #5A5A5D;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 41px;
+}
+
 
 
 
@@ -1074,25 +1107,44 @@
 
     .img-dis {
         display: none;
-        
+
     }
-    
-    
+
+
     .form-content hr {
         width: 90%;
         margin-top: 10px;
     }
-    
+
     .form-content input {
         padding: 15px 15% 15px 15px;
-        
+
     }
-    
+
     .form-content button {
         padding: 15px 25.5%;
         margin-top: 20px;
-        
+
     }
 
+
+    /* ///////////////////////////////// */
+
+    .footer-container {
+        background: rgba(19, 19, 24, 0.05);
+        padding: 12px 16px;
+    }
+
+    .foot-header{
+        margin-bottom: -10px;
+    }
+
+    .footer-container p{
+        margin-top: 20px;
+    }
+
+    .foot-icon{
+        margin-bottom: 22px;
+    }
 
 }
