--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
     color: #131318;
     font-family: Mulish;
     font-size: 2.2rem;
-    font-weight: 800;
+    font-weight: 900;
 }
 
 .nav-title-orange {
@@ -78,7 +78,7 @@
 .header-container-img {
     background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(./Images/Group\ 13\ \(1\)\ \(1\).png);
     border-radius: 16px;
-    width: 83%;
+    width: 85%;
     height: 446px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -96,7 +96,7 @@
     color: #FFF;
     font-family: Mulish;
     font-size: 4rem;
-    font-weight: 800;
+    font-weight: 900;
 }
 
 .header-dis p {
@@ -118,18 +118,38 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    width: 74%;
+    width: 51%;
     margin-top: -20px;
 }
 
 .header-input input {
-    padding: 18px 0px 18px 15px;
+    width: 7rem;
+    padding: 16px 0px 16px 15px;
     border-radius: 8px;
     background: #FFF;
     border: none;
     color: rgba(19, 19, 24, 0.50);
     text-align: left;
     font-family: Mulish;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.header-input .inp2{
+    background: #FFF;
+    border: none;
+    padding: 15px 12px 15px 4px;
+    border-radius: 8px;
+    color: rgba(19, 19, 24, 0.50);
+    font-size: 1rem;
+    font-weight: 400;
+}
+.header-input .inp1{
+    background: #FFF;
+    border: none;
+    padding: 15px 56px 15px 4px;
+    border-radius: 8px;
+    color: rgba(19, 19, 24, 0.50);
     font-size: 1rem;
     font-weight: 400;
 }
@@ -152,7 +172,7 @@
 /* ////////////////////////////////////////////////// */
 
 .hill-container {
-    width: 85%;
+    padding: 0 100px;
     margin: 0 auto;
     display: flex;
     gap: 50px;
@@ -208,8 +228,7 @@
 /* ///////////////////////////////////// */
 
 .choose-container {
-    /* text-align: center; */
-    width: 85%;
+    width: 100%;
     margin: 100px auto;
 }
 
@@ -231,106 +250,68 @@
     padding: 0px 210px;
 }
 
-.st-row {
-    display: flex;
+
+.photo-collage{
+    padding: 0 100px;
+    display: grid;
     gap: 20px;
-    margin: 20px auto;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
-.mal {
-    position: absolute;
-    color: #FFF;
-    margin-top: 10%;
-    left: 25%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
+.item{
+    position: relative;
+    height: 300px;
+    text-align: center;
+}
+
+.photo-collage img{
+    width: 100%;
+    height: 100%;
+}
+
+.item1{
+    grid-column: auto/span 6;
+}
+.item2{
+    grid-column: auto/span 6;
+}
+.item3{
+    grid-column: auto/span 4;
+}
+.item4{
+    grid-column: auto/span 5;
+}
+.item5{
+    grid-column: auto/span 3;
+}
+.item6{
+    grid-column: auto/span 5;
+}
+.item7{
+    grid-column: auto/span 7;
+}
+
+
+
+.text{
+    border-radius: 15px;
+    font-size: 24px;
     font-weight: 800;
-
-}
-
-.indo {
+    color: white;
+    background-color: #00000034;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    color: #FFF;
-    margin-top: 10%;
-    left: 70%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-}
-
-.nd-row {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
-    gap: 20px;
-    margin: 20px auto;
+    align-items: center;
+    justify-content: center;
+    
 }
 
-.sri {
-    position: absolute;
-    color: #FFF;
-    margin-top: 9%;
-    left: 18%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-
-}
-
-.north {
-    position: absolute;
-    color: #FFF;
-    margin-top: 9%;
-    left: 48%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-
-}
-
-.kash {
-    position: absolute;
-    color: #FFF;
-    margin-top: 9%;
-    left: 81%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-
-}
-
-
-
-.rd-row {
-    display: flex;
-    gap: 20px;
-    margin: 20px auto;
-}
-
-.bang {
-    position: absolute;
-    color: #FFF;
-    margin-top: 10%;
-    left: 20%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-}
-
-.bandor {
-    position: absolute;
-    color: #FFF;
-    margin-top: 10%;
-    left: 65%;
-    color: #FFF;
-    font-family: Mulish;
-    font-size: 28px;
-    font-weight: 800;
-}
 
 /* ///////////////////////////////////// */
 
@@ -693,6 +674,7 @@
     width: 60%;
     height: 422px;
     border-radius: 16px;
+    position: relative;
 }
 
 .img-dis {
@@ -701,9 +683,10 @@
     transform: rotate(-19.628deg);
     border-radius: 16px;
     background: #FF5400;
-    position: relative;
-    left: 49%;
-    top: 55%;
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    
 }
 
 .img-dis h3 {
@@ -768,6 +751,9 @@ hr{
     line-height: 26px;
     margin-top: 41px;
 }
+
+
+
 
 
 
@@ -842,6 +828,7 @@ hr{
     /* /////////////////////////////////////// */
 
     .hill-container {
+        padding: 0 10px;
         flex-direction: column;
         margin-top: 24px;
     }
@@ -866,105 +853,15 @@ hr{
         padding: 0px;
     }
 
-    .choose-container img {
-        height: 176px;
-        border-radius: 16px;
-    }
+   .photo-collage{
+    padding: 0 10px;
+    grid-template-columns: 1fr;
+   }
 
-    .st-row {
-        flex-direction: column;
-    }
-
-    .mal {
-        position: absolute;
-        color: #FFF;
-        margin-top: 18%;
-        left: 35%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-    }
-
-    .indo {
-        position: absolute;
-        color: #FFF;
-        margin-top: 70%;
-        left: 34%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-    }
-
-    .nd-row {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .sri {
-        position: absolute;
-        color: #FFF;
-        margin-top: 18%;
-        left: 35%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-
-    }
-
-    .north {
-        position: absolute;
-        color: #FFF;
-        margin-top: 70%;
-        left: 25%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-
-    }
-
-    .kash {
-        position: absolute;
-        color: #FFF;
-        margin-top: 120%;
-        left: 35%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-
-    }
-
-    .rd-row {
-        flex-direction: column;
-    }
-
-    .bang {
-        position: absolute;
-        color: #FFF;
-        margin-top: 20%;
-        left: 30%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-
-    }
-
-    .bandor {
-        position: absolute;
-        color: #FFF;
-        margin-top: 70%;
-        left: 30%;
-        color: #FFF;
-        font-family: Mulish;
-        font-size: 28px;
-        font-weight: 800;
-
-    }
+   .photo-collage .item{
+    height: 200px;
+    grid-column: auto;
+   }
 
     /* ////////////////////////////////////////     */
 
@@ -1112,8 +1009,19 @@ hr{
     }
 
     .img-dis {
-        display: none;
+        left: 29%;
+        top: 74%;
+        width: 214px;
+        height: 79px;
 
+    }
+
+    .img-dis h3{
+        padding: 0;
+    }
+    .img-dis h2{
+        margin-top: -23px;
+        font-size: 22px;
     }
 
 
